# analyzer

./: .env.example  .gitignore  HANDOFF.md  PROGRESS.md  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt  seller_scanner.spec
fixtures/: keepa_response.json  sample_import.csv
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: cleanup_duplicates.py  integration_test.py
src/: __init__.py  main.py
src/api/: __init__.py  keepa.py  spapi.py
src/core/: __init__.py  alerts.py  competitors.py  config.py  csv_importer.py  models.py  scheduler.py  scoring.py  shipping.py  sounds.py  updater.py
src/db/: __init__.py  models.py  repository.py  session.py
src/gui/: __init__.py  brand_tab.py  charts.py  competitors_tab.py  context_menu.py  dashboard_tab.py  detail_dialog.py  diagnostics_tab.py  imports_tab.py  main_window.py  mappings_tab.py  settings_tab.py  themes.py  widgets.py
src/utils/: __init__.py  export.py  mock_data.py
src/web/: __init__.py  server.py
src/web/templates/: dashboard.html
tests/: __init__.py  conftest.py  test_charts.py  test_competitors.py  test_csv_importer.py  test_gui.py  test_keepa.py  test_migrations.py  test_models.py  test_repository.py  test_scoring.py  test_shipping.py  test_sounds.py  test_updater.py  test_web.py
